fixed right margin on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -109,4 +109,9 @@ body {
 	.maps-section {
 		flex-direction: column;
 	}
+
+	.row {
+		margin-right: 0 !important;
+	}
 }
+
